eslintrc file updated.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,8 @@
       "arrow-body-style": "off",
       "comma-dangle": "off",
       "linebreak-style": "off",
-      "react/jsx-one-expression-per-line": "off"
+      "react/jsx-one-expression-per-line": "off",
+      "react/prop-types": "off"
     },
     "overrides": [
       {
