--- a/package.json
+++ b/package.json
@@ -53,5 +53,8 @@
     "stylelint-config-standard": "^21.0.0",
     "stylelint-csstree-validator": "^1.9.0",
     "stylelint-scss": "^3.21.0"
-  }
+  },
+  "overrides": {
+    "autoprefixer": "10.4.5"
+}
 }
